# FractalGenerator

./: CMakeLists.txt  LICENSE  README.md  fractal_generator.py
include/: Fractal.hpp  FractalHandler.hpp  MandelbrotFractal.hpp
module/: FractalModule.cpp
